kubernetes/ingress/nginx-ing-nginx-ingress-controller.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: nginx-ing
    meta.helm.sh/release-namespace: default
    purelb.io/allocated-by: PureLB
    purelb.io/allocated-from: default
    purelb.io/announcing-IPv4: kubenode1,enX1
  labels:
    app.kubernetes.io/instance: nginx-ing
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: nginx-ingress
    app.kubernetes.io/version: 3.2.0
    helm.sh/chart: nginx-ingress-0.18.0
  name: nginx-ing-nginx-ingress-controller
  namespace: default
spec:
  allocateLoadBalancerNodePorts: true
  clusterIP: 10.103.40.33
  clusterIPs:
  - 10.103.40.33
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    nodePort: 31066
    port: 80
    protocol: TCP
    targetPort: 80
  - name: https
    nodePort: 31375
    port: 443
    protocol: TCP
    targetPort: 443
  - name: submissions
    nodePort: 31385
    port: 465
    protocol: TCP
    targetPort: 465
  selector:
    app.kubernetes.io/instance: nginx-ing
    app.kubernetes.io/name: nginx-ingress
  sessionAffinity: None
  type: LoadBalancer
